@@ -1,5 +1,7 @@
 Date	Added
 
+2007/09/10
+	* Added 'quest_exp_rate', adjusts exp gained by 'getexp' [ultramage]
 2007/09/05
 	* Added 'nomemo' mapflags to some Cursed Abbey maps [Playtester]
 2007/08/19
